--- a/Script/index.htm
+++ b/Script/index.htm
@@ -6,41 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JacobCafé</title>
     <meta name="description" content="JacobCafé está localizado em Osaka, Japão.">
-    <meta name="keywords" content="JacobcasadoCafé, café, Osaka, Japão,">
     <meta name="author" content="JacobCafé">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-    <nav>
-        <span>Casa do Café Jacob</span>
+        <div class="logo">
+            <img src="imagem Fagner/download.png" alt="JacobCafé">
+    <div id="menu">                                       
+            <ul>                         
+                <li>
+                   <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Receitas</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
+                <li>
+                    <a class="btn-menu" href="#">Fazer Pedido</a>
+                </li>
+            </ul>
+    </div>
+    <section>
+        <h1>Bem-vindo(a) ao JacobCafé</h1>
+        <p>O JacobCafé é um restaurante de café e sorvete localizado em Osaka, Japão. Nossas receitas são variadas e temas diversos, desde os mais tradicionais até os mais inovadores.</p>
+        <p>Venha conhecer nossas receitas e experimente nossos sabores.</p>
+    </section>
+    <section>
+        <h2>Nossas Receitas</h2>
         <ul>
-            <li><a>Home</a></li>
-            <li><a>Receitas</a></li>
-            <li><a>Contato</a></li>
-            <li><a>Sobre</a></li>
-          </ul>
-          <a>GitHub</a>
-    </nav>
-    </header>
-    <main>
-        <section>
-            <header>
-                <span>NOVIDADES</span>
-                <h1>Novas Receitas</h1>
-                <hr/>
-                <h2>Explore nossas novidades eReceita bolo de chocolate</h2>
-
-            </header>
-            <div></div>
-        </section>
-        <section>
-
-        </section>
-
-</main>
-    <footer>
-
-    </footer>
-    
-</body>
+            <li>
+                <a href="#">Bolo de Chocolate</a>
+            </li>
+            <li>
+                <a href="#">Bolo de Cenoura</a>
+            </li>
+            <li>
+                <a href="#">Bolo de Morango</a>
+            </li>
+            <li>
+                <a href="#">Bolo de Limão</a>
+            </li>
+            <li>
+                <a href="#">Bolo de Maracujá</a>
+            </li>
+    </section>
+    </body>
 </html>
